--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,13 @@ body {
   margin: auto;
   width: 90%;
   box-sizing: border-box;
+  position: relative;
+}
+
+.user p{
+  top: 0;
+  left: 0;
+  position: absolute;
 }
 
 .header-menu .logo {
